<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Teachers Pet</string>
    <string name="action_signout">Sign Out</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUp Activity</string>
    <string name="username_field_hint">Username</string>
    <string name="name_field_hint">Name</string>
    <string name="email_field_hint">Email</string>
    <string name="password_field_hint">Password</string>
    <string name="confirm_password_field_hint">Confirm Password</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="missing_fields_alert_title">Missing Fields</string>
    <string name="missing_fields_alert_message">Please complete all fields in this form</string>
    <string name="empty_evaluation_name_field">Evaluation name cannot be empty</string>
    <string name="empty_evaluation_class_select">A class must be selected</string>
    <string name="confirm_password_alert_title">Password Warning</string>
    <string name="confirm_password_alert_message">The password confirmation does not match the original password</string>
    <string name="signup_fail_alert_title">Sign Up Error</string>
    <string name="login_fail_alert_title">Failed Login</string>
    <string name="title_activity_students_fragment">StudentsFragment</string>
    <string name="add_new_student_button">Add New Student</string>
    <string name="add_student_button">Add Student</string>
    <string name="add_class_button">Add Class</string>
    <string name="add_new_class_button">Add New Class</string>
    <string name="add_new_evaluation_button">Add New Evaluation</string>
    <string name="add_evaluation_button">Add Evaluation</string>
    <string name="title_activity_add_student">Add Student</string>
    <string name="new_student_first_name_hint">First Name</string>
    <string name="new_student_last_name_hint">Last Name</string>
    <string name="new_student_grade_hint">Grade</string>
    <string name="data_store_error_title">Data Store Error</string>
    <string name="data_store_error_message">There was an error saving this information</string>
    <string name="title_activity_add_class">Add Class</string>
    <string name="new_class_name_hint">Class Name</string>
    <string name="title_activity_add_evaluation">AddEvaluationActivity</string>
    <string name="new_evaluation_name_hint">Evaluation Name</string>
</resources>
